# betterfetch-cpp

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_CPP.md:Zone.Identifier  LICENSE  List.md  Makefile  README.md  README_CPP.md:Zone.Identifier  ascii.txt  git.txt  main.cpp
functions/: ascii_show.cpp  get_cpu_info.cpp  get_gpu_info.cpp  get_kernel.cpp  get_memory_info.cpp  get_os_info.cpp  get_shell.cpp  get_up_time.cpp  get_user.cpp  load.hpp
